force-app/main/default/objects/ReferralCounter__c/ReferralCounter__c.object-meta.xml
<CustomObject>
    <description>Junction between accounts and contacts to keep a running count of the number of referrals by type</description>
    <label>Referral Counter new</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Counter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Counters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>