force-app/main/default/objects/ReferralCounter__c/fields/Latest_Sold_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sold_Opportunity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Sold Opportunity Date</label>
    <type>Date</type>
</CustomField>