force-app/main/default/objects/ReferralCounter__c/fields/X1YearAny__c.field-meta.xml
<CustomField>
    <fullName>X1YearAny__c</fullName>
    <inlineHelpText>The number of referrals made in the past 1 year.</inlineHelpText>
    <label>1 Year Total Referrals</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>