force-app/main/default/objects/ReferralCounter__c/fields/X6MonthsAny__c.field-meta.xml
<CustomField>
    <fullName>X6MonthsAny__c</fullName>
    <inlineHelpText>The number of referrals made in the past 6 months.</inlineHelpText>
    <label>6 Months Total Referrals</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>