force-app/main/default/objects/ReferralCounter__c/listViews/All_with_Referral_Contact.listView-meta.xml
<ListView>
    <fullName>All_with_Referral_Contact</fullName>
    <columns>NAME</columns>
    <columns>Referral_Account__c</columns>
    <columns>Referral_Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>X1YearSold__c</columns>
    <columns>X1YearAny__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referral_Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All with Referral Contact</label>
</ListView>